<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManual"
    android:orientation="vertical"
    android:background="@color/bg_white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="142dp"
                android:layout_height="90dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/iboto_logo"
                app:srcCompat="@drawable/iboto_no_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothic_a1_extrabold"
                android:text="About the App"
                android:textSize="24dp"
                android:textColor="@color/primary_blue"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:elevation="5dp"
                app:cardMaxElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_info_small"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/about_text"
                        android:layout_gravity="center"
                        android:fontFamily="@font/questrial"
                        android:textColor="@color/primary_blue"
                        android:textSize="18dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothic_a1_extrabold"
                android:text="How to Navigate to Candidates List and Information"
                android:textSize="24dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:textColor="@color/primary_blue"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav3"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>



            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardMaxElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nav1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/questrial"
                        android:textColor="@color/primary_blue"
                        android:textSize="18dp"
                        android:gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/gothic_a1_extrabold"
                android:gravity="center"
                android:text="How to Navigate to Survey"
                android:textColor="@color/primary_blue"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_s1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_s2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>




            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardMaxElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nav_s"
                        android:layout_gravity="center"
                        android:fontFamily="@font/questrial"
                        android:textColor="@color/primary_blue"
                        android:textSize="18dp"
                        android:gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/gothic_a1_extrabold"
                android:gravity="center"
                android:text="How to Navigate to News"
                android:textColor="@color/primary_blue"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_n1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_n2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>




            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardMaxElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nav_n"
                        android:layout_gravity="center"
                        android:fontFamily="@font/questrial"
                        android:textColor="@color/primary_blue"
                        android:textSize="18dp"
                        android:gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/gothic_a1_extrabold"
                android:gravity="center"
                android:text="How to Navigate to Voting Steps"
                android:textColor="@color/primary_blue"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_v1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nav_v2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>




            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardMaxElevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nav_v"
                        android:layout_gravity="center"
                        android:fontFamily="@font/questrial"
                        android:textColor="@color/primary_blue"
                        android:textSize="18dp"
                        android:gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>



</LinearLayout>